--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="header__search">
         <div class="search">
-          <input matInput class="search__input" placeholder="H world" value="search"
+          <input matInput class="search__input" placeholder="search..."
                  (keydown.enter)="searchShow($event.target.value)"
           >
         </div>
@@ -22,7 +22,7 @@
             <a class="nav__link" routerLink="/">Shows</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" routerLink="/shedule">Shedule</a>
+            <a class="nav__link" routerLink="/schedule">Shedule</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" routerLink="/articles">Articles</a>
