--- a/src/app/components/show-info/show-info.component.scss
+++ b/src/app/components/show-info/show-info.component.scss
@@ -3,8 +3,6 @@
 .shows {
 
   &__item {
-    width: 15%;
-    height: 100%;
     min-width: 170px;
     min-height: 315px;
     display: flex;
@@ -54,8 +52,10 @@
   }
 
   &__banner {
-    max-width: 280px;
     margin-right: 15px;
+    max-width: 170px;
+    height: 315px;
+    padding-top: 40px;
   }
 
   &__text {
@@ -89,4 +89,12 @@
   &:last-child {
     margin-right: 0;
   }
+}
+
+.mat-card {
+  padding-bottom: 2%;
+}
+
+.mat-card-title {
+  margin: 0;
 }
