--- a/src/app/components/shows/shows.component.scss
+++ b/src/app/components/shows/shows.component.scss
@@ -17,6 +17,7 @@
     width: 15%;
     height: 100%;
     min-width: 170px;
+    max-width: 170px;
     min-height: 315px;
     display: flex;
     flex-direction: column;
