--- a/src/app/components/loader/loader.component.scss
+++ b/src/app/components/loader/loader.component.scss
@@ -1,4 +1,4 @@
-.loading-spinner{
+.loading-spinner {
   background-color: #0000001f;
   position: absolute;
   width: 100%;
@@ -8,13 +8,14 @@
   align-items: center;
   justify-content: center;
   display: grid;
+  z-index: 10;
 }
 
-.loading-spinner img{
+.loading-spinner img {
   align-self: end;
 }
 
-.loading-message{
+.loading-message {
   text-align: center;
   align-self: start;
 }
