--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,3 +40,11 @@ p {
   }
 }
 
+.cdk-virtual-scroll-orientation-horizontal .cdk-virtual-scroll-content-wrapper {
+  display: flex !important;
+
+  .shows__item {
+    margin-right: 15px;
+  }
+}
+
