--- a/src/app/components/show-info/show-info.component.html
+++ b/src/app/components/show-info/show-info.component.html
@@ -2,31 +2,31 @@
   <div class="container">
     <div class="info__wrapper">
       <div class="info__banner">
-        <mat-card *ngFor="let show of data">
+        <mat-card>
           <div class="shows__img-wrap">
-            <img mat-card-image src="{{show.image.medium}}"
+            <img mat-card-image src="{{data.image.medium}}"
                  alt="show banner"
                  class="shows__img"
             >
           </div>
 
-          <mat-card-title class="shows__name">{{show.name}}</mat-card-title>
+          <mat-card-title class="shows__name">{{data.name}}</mat-card-title>
 
           <mat-card-content class="shows__info">
                 <span>
-                  {{show.language}}
+                  {{data.language}}
                 </span>
             <span>
-                  <mat-icon>star_half</mat-icon>{{ show.rating.average}}
+                  <mat-icon>star_half</mat-icon>{{ data.rating.average}}
                 </span>
           </mat-card-content>
         </mat-card>
       </div>
-      <div class="info__text" *ngFor="let show of data">
-        <h3>{{ show.name }}</h3>
+      <div class="info__text">
+        <h3>{{ data.name }}</h3>
         <p>{{ text }}</p>
         <ul class="info__genres">
-          <li class="genres__item" *ngFor="let genre of show.genres">
+          <li class="genres__item" *ngFor="let genre of data.genres">
             {{ genre }}
           </li>
         </ul>
