--- a/src/app/components/shows/shows.component.scss
+++ b/src/app/components/shows/shows.component.scss
@@ -65,9 +65,8 @@
 }
 
 .shows-wrapper .example-viewport {
-  height: 100%;
   width: 100%;
-  min-height: 335px;
+  height: 335px;
 }
 
 .shows-wrapper .example-viewport .cdk-virtual-scroll-content-wrapper {
